rct_tests/tests/ui/struct_unit.stderr
error: rct derive macros can only supported structs named
 --> tests/ui/struct_unit.rs:4:1
  |
4 | struct Tests;
  | ^^^^^^^^^^^^^
