rct_tests/tests/ui/struct_unit.rs
use rct::ToTable;

#[derive(ToTable)]
struct Tests;

fn main() {}